[package]
name = "clipboard-files"
authors = ["Didrik Nordström <https://github.com/betamos>"]
repository = "https://github.com/betamos/clipboard-files/"
description = "Cross-platform specialized clipboard reader for file paths"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.15"
urlencoding = "2.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "4.4.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
objc-foundation = "0.1.1"
objc_id = "0.1.1"