[package]
name = "clipboard-files"
version = "0.1.0"
edition = "2021"

description = "Read file paths from the clipboard"
keywords = ["clipboard"]
authors = ["Didrik Nordström <https://github.com/betamos>"]
repository = "https://github.com/betamos/clipboard-files/"
homepage = "https://github.com/betamos/clipboard-files/"
documentation = "https://docs.rs/clipboard-files/"
license = "MIT OR Apache-2.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.15"
urlencoding = "2.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "4.4.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
objc-foundation = "0.1.1"
objc_id = "0.1.1"